--- a/src/clj/templates/login-page.html
+++ b/src/clj/templates/login-page.html
@@ -18,30 +18,17 @@
           <label for="email">Email Address</label>
           <input type="email" name="email" id="email" required>
 	</div>
-	<div>
-	  <font id="emailError" color="red" style="display: none"> Please insert a valid email</font>
-        </div>
 
         <div>
           <label for="password">Password</label>
           <input type="password" name="password" id="password" required>
         </div>
-	<div>
-	  <font id="loginError" color="red" style="display: none"> Invalid email or password</font>
-        </div>
+
         <div>
           <label for="submit"></label>
-          <input type="hidden" value="Login &rarr;" id="submit">
+          <input type="submit" value="Login &rarr;" id="submit">
         </div>
-	<noscript>
-          <div>
-            <label for="submitNoJS"></label>
-            <input type="submit" value="Login &rarr;" id="submitNoJS">
-          </div>
-	</noscript>
-	<div>
-	  <font id="formError" color="red" style="display: none"> Please, complete the form! </font>
-        </div>
+
       </fieldset>
     </form>
   </body>
